US8 Fixed icon position, fixed div alignments

--- a/src/lwc/portalCasesList/portalCasesList.css
+++ b/src/lwc/portalCasesList/portalCasesList.css
@@ -31,6 +31,9 @@
     vertical-align: middle;
 }
 
+.rotateIcon {
+    transform: rotate(45deg);
+}
 .noPadding {
     padding: 0px;
 }
